# family_finances_2

./: .env.example  .gitignore  Dockerfile  Dockerfile.local  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  pytest.ini  setup.cfg
.github/workflows/: main.yml
data/: data.json
k8s/: collect-static-job.yaml  configmap-nginx.yaml  ff2-django-deployment.yaml  ff2-django-service.yaml  nginx-deployment.yaml  nginx-service.yaml  pvc.yaml
nginx/: nginx.conf
src/: data.json  manage.py
src/api/v1/: permissions.py  urls.py
src/api/v1/auth/: authentication.py
src/api/v1/export/: views.py
src/api/v1/transactions/: serializers.py  validators.py  views.py
src/api/v1/users/: filters.py  serializers.py  validators.py  views.py
src/export/: services.py  urls.py  views.py
src/family_finances/: asgi.py  constants.py  settings.py  urls.py  wsgi.py
src/static/css/: style.css
src/static/js/: add_summary.js  add_transaction.js  dashboard.js  sidebar_toggle.js
src/templates/: base.html
src/templates/includes/: _period.html  auth_telegram.html  header.html  menu.html  modal_login.html  modal_registration.html  sidebar.html  topbar.html
src/templates/registration/: login.html
src/templates/transactions/: add_summary.html  add_transaction.html  change_period.html  index.html  summary.html  transactions.html
src/templates/webapp/: webapp.html
src/tools/: transactions.py
src/transactions/: forms.py  models.py  urls.py  views.py
src/transactions/migrations/: 0001_initial.py  0002_initial.py  0003_space_linked_chat.py  0004_alter_space_linked_chat.py
src/users/: forms.py  models.py  urls.py  views.py
src/users/migrations/: 0001_initial.py  0002_alter_coresettings_current_space.py  0003_alter_coresettings_current_space.py  0004_remove_telegramsettings_joint_chat.py  0005_alter_telegramsettings_id_telegram.py
tests/: conftest.py  test_auth.py  test_export.py  test_logics.py  test_periods.py  test_tools_transactions.py  test_transaction.py  test_transactions.py  test_user.py  test_users.py
