[tool.poetry]
name = "family-finances-2"
version = "0.1.0"
description = ""
authors = ["Denis Ivanov <dnb8866@gmail.com>"]
readme = "README.md"
packages = [{include = "family_finances_2", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.3"
pytest = "^8.3.3"
flake8 = "^7.1.1"
djangorestframework = "^3.15.2"
python-dotenv = "^1.0.1"
psycopg2 = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
