[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Denis Ivanov <dnb8866@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "5.1.3"
djangorestframework = "3.15.2"
psycopg2-binary = "2.9.10"
drf-yasg = "1.21.8"
django-extensions = "3.2.3"
django-filter = "24.3"
ipython = "8.29.0"
django-bootstrap5 = "24.3"
gunicorn = "23.0.0"
python-dotenv = "1.0.1"
django-telegram-login = "0.2.3"
openpyxl = "3.1.5"
sentry-sdk = "2.25.1"


[tool.poetry.group.dev.dependencies]
flake8 = "7.3.0"
flake8-pyproject = "1.2.3"
pytest = "8.4.1"
pytest-django = "4.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
ignore = ['E501']
exclude = ['tests/*', 'migrations/*']

[tool.pytest.ini_options]
pythonpath = "src"
DJANGO_SETTINGS_MODULE = "family_finances.settings"
testpaths = ["tests"]
python_files = ["tests.py", "test_*.py", "*_tests.py"]

